Fix spacing away of nav bar based on banner status

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,10 +7,18 @@
 
   .mobi-mart-content {
     flex: 1;
-
-    // Magic number to get 110px spacing between bottom of nav text and first element of the page.
-    margin-top: 50px;
   }
 
   .mobi-mart-footer {}
+
+  &.no-banner {
+    .mobi-mart-content {
+      margin-top: 20px;
+
+      @include media-breakpoint-up(md) {
+        // Magic number to get 110px spacing between bottom of nav text and first element of the page.
+        margin-top: 50px;
+      }
+    }
+  }
 }
